初始化项目

--- a/pages/goods/goods.wxml
+++ b/pages/goods/goods.wxml
@@ -1,2 +1,4 @@
 <!--pages/goods/goods.wxml-->
-<text>pages/goods/goods.wxml</text>
+<view class="newsList" wx:for="{{headline}}" wx:key="index">
+  <text bindtap="tabTitle" data-url="{{item.href}}">{{item.title}}</text>
+</view>
