--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -1,1 +1,50 @@
 /* pages/my/my.wxss */
+page{
+  background: #eee;
+  width: 100%;
+}
+.login{
+  background: #fff;
+  width: 100% ;
+  height: 80rpx;
+  border-top:1rpx solid #eee;
+  border-bottom:1rpx solid #eee;
+  padding: 10rpx 0;
+  margin-top: 20rpx;
+}
+.login image{
+  width: 70rpx;
+  height: 70rpx;
+  border: 1rpx solid #b1b1b1;
+  border-radius: 35rpx; 
+}
+.login text{
+  height: 80rpx;
+  line-height: 80rpx;
+}
+.menu_list{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  text-align: center;
+  margin-top: 20rpx;
+  background: #fff;
+}
+.menu_item{
+  width: 24.85% ;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  /* margin-top: 20rpx; */
+  border-right: 1rpx solid #b1b1b1;
+  border-bottom: 1rpx solid #b1b1b1;
+  padding: 20rpx 0;
+}
+.menu_item image{
+  width: 100rpx;
+  height: 100rpx;
+}
+.menu_item text{
+  font-size: 30rpx;
+  margin-top: 10rpx;
+}
