--- a/pages/my/my.wxss
+++ b/pages/my/my.wxss
@@ -13,27 +13,58 @@ page{
   margin-top: 20rpx;
 }
 .login image{
+  float: left;
   width: 70rpx;
   height: 70rpx;
   border: 1rpx solid #b1b1b1;
   border-radius: 35rpx; 
+  margin-left: 20rpx;
 }
-.login text{
+.music image{
+  border: none; 
+}
+.music .play{
+  animation: rotate 3s linear infinite;
+}
+.music .pause{
+  animation-play-state: paused;
+}
+@keyframes rotate{
+  0%{
+    transform: rotate(0deg);
+  }
+  100%{
+    transform: rotate(360deg)
+  }
+}
+.login .title{
+  float: left;
+  margin-left: 20rpx;
   height: 80rpx;
   line-height: 80rpx;
 }
+.login .right_arrow{
+  height: 60rpx;
+  width: 60rpx;
+  margin-top: 10rpx;
+  float: right;
+  margin-right: 20rpx;
+}
 .menu_list{
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+  width: 750rpx;
   text-align: center;
   margin-top: 20rpx;
   background: #fff;
+  overflow: hidden;
+}
+.menu_box{
+  width: 760rpx;
 }
 .menu_item{
-  width: 24.85% ;
-  display: flex;
-  flex-direction: column;
+  width: 189rpx ;
+  /* display: flex;
+  flex-direction: column; */
+  float: left;
   align-items: center;
   /* margin-top: 20rpx; */
   border-right: 1rpx solid #b1b1b1;
@@ -43,6 +74,8 @@ page{
 .menu_item image{
   width: 100rpx;
   height: 100rpx;
+  display: block;
+  margin: 0 44rpx;
 }
 .menu_item text{
   font-size: 30rpx;
