加关注，本地存储

--- a/pages/favour/favour.wxml
+++ b/pages/favour/favour.wxml
@@ -1,2 +1,4 @@
-<!--pages/favour/favour.wxml-->
-<text>pages/favour/favour.wxml</text>
+
+<view class="newsList" wx:for="{{headline}}" wx:key="index">
+  <text bindtap="tabTitle" data-url="{{item.href}}">{{item.title}}</text>
+</view>
