--- a/pages/favour/favour.wxss
+++ b/pages/favour/favour.wxss
@@ -1,1 +1,9 @@
 /* pages/favour/favour.wxss */
+page{
+  background: #eee;
+}
+.newsList{
+  background: #fff;
+  margin: 10rpx 0;
+  padding: 10rpx 0;
+}
