--- a/pages/goods/goods.wxss
+++ b/pages/goods/goods.wxss
@@ -1,9 +1,12 @@
-/* pages/goods/goods.wxss */
+@import  "../common/goodsLeft/goodsLeft.wxss";
+@import  "../common/goodsRight/goodsRight.wxss";
 page{
+  display: flex;
+}
+.left{
+  flex: 1;
   background: #eee;
 }
-.newsList{
-  background: #fff;
-  margin: 10rpx 0;
-  padding: 10rpx 0;
+.right{
+  flex: 3;
 }
