--- a/pages/favour/favour.wxss
+++ b/pages/favour/favour.wxss
@@ -1,9 +1,6 @@
 /* pages/favour/favour.wxss */
+@import  "../common/goodsRight/goodsRight.wxss";
+
 page{
   background: #eee;
-}
-.newsList{
-  background: #fff;
-  margin: 10rpx 0;
-  padding: 10rpx 0;
 }
